Update עדכון שבועי “מי-שלא-מביט-מפסיד”

--- a/content/weekly-update/מי-שלא-מביט-מפסיד.md
+++ b/content/weekly-update/מי-שלא-מביט-מפסיד.md
@@ -7,13 +7,11 @@ date: 2024-02-08T18:19:22.026Z
 1. **פרידה מחיתולים**: ביום שני 12.2.24 תתקיים הרצאה של אחינועם על תהליך הפרידה מחיתולים. ההרצאה מומלצת לכל מי שבתהליך גמילה או לקראת תהליך, והיא שמה דגש על האופן שאנחנו רואות את הפרידה מהחיתול ואיך היא משתלבת בכל הגישה שלנו בגן… ההרצאה תתקיים בשני הקרוב בשעה 20:00 בזום. נשלח לכם במייל טופס הרשמה להרצאה. מזכירות שהרצאה מותנית בהשתתפות של 10 הורימות לפחות.
 2. **יום המשפחה**: זהו אחד החגים האהובים עלינו בגן, ומדי שנה אנחנו בוחרות להקדיש אותו דווקא למשפחה המורחבת. השכבה הבוגרת מכינה מדי שנה מסיבה אליה נזמין סבא וסבתא (או הרכב אחר של שניים, כמובן, כל משפחה וההרכב שלה). המסיבה תתקיים ביום שישי הקרוב -16.2, מקוות שכבר שריינתם עם סבאסבתא. זהו יום פעילות כמעט רגיל בגן: נבקש ביום זה לאסוף את השכבה הצעירה מעט מוקדם יותר - עד 11:30. הבוגרימות יישארו להכין את הגן וב-12:00 יקבלו את פני סבא וסבתא ויובילו אותם בתחנות פעילות שונות ברחבי הגן.
 
-
+   3. **בחירות**: ב-27.2.24 יתקיימו בחירות ברשויות המקומיות. זהו יום שבתון ולכן ביום זה הגן לא יפעל.
 
 **שבת נעימה,**
 
 **עומרי, אחינועם וכל גן ילדי הטבע הדמוקרטי**
-
-
 
 ## השכבה הצעירה
 
@@ -32,8 +30,6 @@ date: 2024-02-08T18:19:22.026Z
 **שבת מנוחה,**
 
 **צוות השכבה הצעירה - הילה, רון, נגה, יהודית, נעמי, שירז, גבי, ענבר, אלמוג ורוני**
-
-
 
 ## השכבה הבוגרת
 
