--- a/content/weekly-update/מי-שלא-מביט-מפסיד.md
+++ b/content/weekly-update/מי-שלא-מביט-מפסיד.md
@@ -23,7 +23,7 @@ date: 2024-02-08T18:19:22.026Z
 
 **ציור בסלק**
 
-השבוע לכיתה הגיע סלק. לא סלק חתוך, מקולף ומבושל כמו שאנחנו אוהבים בארוחת צהריים, אלא סלק שלם. מה נעשה איתו, תהינו. החלטנו לראות האם כמו שהוא צובע לנו את האצבעות, הוא גם יכול לצבוע דף? קילפנו, חתכנו למקלות וניסינו לצייר על דפים לבנים - ממש כמו צבע, הסלק צבע את הדף הלבן בפסים ועיגולים ורודים! איזה כיף! קצת נשנשנו וקצת קשקשנו, ולבסוף יצאו לנו דפים עם עיטורים ורדרדים יפהפיים!החתמת עלים
+השבוע לכיתה הגיע סלק. לא סלק חתוך, מקולף ומבושל כמו שאנחנו אוהבים בארוחת צהריים, אלא סלק שלם. מה נעשה איתו, תהינו. החלטנו לראות האם כמו שהוא צובע לנו את האצבעות, הוא גם יכול לצבוע דף? קילפנו, חתכנו למקלות וניסינו לצייר על דפים לבנים - ממש כמו צבע, הסלק צבע את הדף הלבן בפסים ועיגולים ורודים! איזה כיף! קצת נשנשנו וקצת קשקשנו, ולבסוף יצאו לנו דפים עם עיטורים ורדרדים יפהפיים!
 
 ניפגש ביום ראשון - לא לשכוח בגדים ספייר, מגבונים לחודש פברואר אם טרם הבאתם, סדינים נקיים ובקבוקים מלאים!
 
