Update עדכון שבועי “הטבעות-והחתמות”

--- a/content/weekly-update/הטבעות-והחתמות.md
+++ b/content/weekly-update/הטבעות-והחתמות.md
@@ -4,9 +4,10 @@ date: 2024-02-23T13:03:56.944Z
 ---
 **שבת שלום לכל משפחות הגן שלנו,**
 
-תזכורת קטנה בטרם נעבור לעדכון:
+שתי הודעות בטרם נעבור לעדכון:
 
-* **בחירות מוניציפליות: ב-27.2.24** יתקיימו בחירות ברשויות המקומיות. זהו יום שבתון והגן יהיה סגור בו.
+1. **בחירות מוניציפליות: ב-27.2.24** יתקיימו בחירות ברשויות המקומיות. זהו יום שבתון והגן יהיה סגור בו.
+2. **הרצאה בנושא דיאלוג וגבולות:** אחד הנושאים שמעסיקים מחנכות והורים רבים לילדים בגיל הרך. מהם גבולות  בחינוך, מי ואיך קובעים אותם ואיך מקיימים אותם? **ההרצאה תתקיים ביום שני, ה-4.3, בזום**. 
 
 **שבת חורף נעימה,**
 
