Update לעבוד בגן ילדי הטבע “לעבוד-בגן-ילדי-הטבע”

--- a/content/work-in-gan/לעבוד-בגן-ילדי-הטבע.md
+++ b/content/work-in-gan/לעבוד-בגן-ילדי-הטבע.md
@@ -93,16 +93,16 @@ teamList:
 
       עכשיו בתור מחנכת בגן, אני יכולה לספר שאני מקבלת פה המון הדרכות מקצועיות שמאפשרות לי לדייק את עצמי בעבודה מול הילדימות מיום ליום. בנוסף, מעבר להדרכות, אנחנו גם מקיימות שיח פתוח על מה עשינו טוב, מה עבד, ומה דורש שיפור. ההתבוננות והיכולת להבין איך אני מנהלת את הסיטואציה טוב יותר, מאפשרת לנו לצמוח ולגדול יחד עם הילדימות.
     img: /assets/pics/uploads/גן_ילדי_הטבע_הדמוקרטי_צוות_צעירים_-_צילום_לנס_הפקות_68-1-.jpg
-  - title: הדר
-    firstName: הדר
+  - title: שירז
+    firstName: שירז
     lastName: "  ארץ"
-    img: /assets/pics/uploads/תמונה-של-הדר-.jpeg
+    img: /assets/pics/uploads/תמונה-יהודית-1.jpg
     index: 6
     role: " "
     description: >-
       ?מאיפה להתחיל לתאר כמה גן ילדי הטבע הוא מקום מיוחד עבורי
 
-      קודם כל, מקום העבודה הזה מתאים לי כמו כפפה ליד: אני סטודנט לחינוך לגיל הרך, ונעים לי לדעת ולהרגיש שוב ושוב שהלימודים שלי לא מהווים מטרד חלילה, אלא מוערכים ומסתכלים עליהם כעל נכס. היכולת לעבוד וללמוד בד בבד - ולראות איך התאוריה והפרקטיקה משתלבים זה בזה - זה נותן תנאים אידאלים להתפתחות מקצועית. 
+      קודם כל, מקום העבודה הזה מתאים לי כמו כפפה ליד: נעים לי לדעת ולהרגיש שוב ושוב שהלימודים שלי לא מהווים מטרד חלילה, אלא מוערכים ומסתכלים עליהם כעל נכס. היכולת לעבוד וללמוד בד בבד - ולראות איך התאוריה והפרקטיקה משתלבים זה בזה - זה נותן תנאים אידאלים להתפתחות מקצועית. 
 
       לעבוד בגן ילדי הטבע מעניק לי סיפוק, הנאה גדולה, ונותן משמעות עצומה לימיי. זאת סביבה אנושית חמה, דואגת, מחבקת ומפרגנת. למנהלימות של הגן חשוב שנדע שיש מי ששומע אותנו, ושהקול והתרומה שלנו לגן הם ייחודיים ויקרים עד מאוד.
 
