Update לעבוד בגן ילדי הטבע “לעבוד-בגן-ילדי-הטבע”

--- a/content/work-in-gan/לעבוד-בגן-ילדי-הטבע.md
+++ b/content/work-in-gan/לעבוד-בגן-ילדי-הטבע.md
@@ -93,9 +93,9 @@ teamList:
 
       עכשיו בתור מחנכת בגן, אני יכולה לספר שאני מקבלת פה המון הדרכות מקצועיות שמאפשרות לי לדייק את עצמי בעבודה מול הילדימות מיום ליום. בנוסף, מעבר להדרכות, אנחנו גם מקיימות שיח פתוח על מה עשינו טוב, מה עבד, ומה דורש שיפור. ההתבוננות והיכולת להבין איך אני מנהלת את הסיטואציה טוב יותר, מאפשרת לנו לצמוח ולגדול יחד עם הילדימות.
     img: /assets/pics/uploads/גן_ילדי_הטבע_הדמוקרטי_צוות_צעירים_-_צילום_לנס_הפקות_68-1-.jpg
-  - title: שירז
-    firstName: שירז
-    lastName: "  ארץ"
+  - title: "יהודית "
+    firstName: יהודית
+    lastName: בריוזקין
     img: /assets/pics/uploads/תמונה-יהודית-1.jpg
     index: 6
     role: " "
