Update עדכון שבועי “ים-יבשה”

--- a/content/weekly-update/ים-יבשה.md
+++ b/content/weekly-update/ים-יבשה.md
@@ -26,8 +26,6 @@ date: 2024-06-21T10:13:04.533Z
 
 הצוותים כבר התכנסו לדון ולבחור בנושאים - בשכבה הצעירה נבחר פרוייקט ים קיצי וכיפי. בשכבה הצעירה, בעקבות נסיעתם של כמה מחברינו לשכבה לארצות שונות, נבחר פרוייקט "מסע מסביב לעולם", בו נדלג קצת בין היבשות ונכיר מקומות חדשים :) מיד נספר לכם על כך בהרחבה!
 
- 
-
 3. **סמינר צוות**: ביום חמישי הקרוב -27.6 - הצוות יוצא לסמינר העשרה של יום, שימו לב שביום זה לא יתקיים גן, והיערכו בהתאם :)
 4. **נחמה באה להשתקע**: שימו לב שבשבועות האחרונים אנחנו מזהות לא מעט גירודי ראש. אנא עשו סירוק יסודי במסרק כינים כדי לוודא שלא קפצו להן כינים לביקור, ואם כן, בצעו טיפול כינים (או חומר, או סירוקים במשך שבוע…). 
 
@@ -53,8 +51,6 @@ date: 2024-06-21T10:13:04.533Z
 
 **צוות השכבה הצעירה - הילה, נגה א, קרן אור, רוני,  יהודית, שירז, גבי, ענבר, דשה ואלמוג**
 
- 
-
 ## שכבת הבוגרים
 
 השבוע התחלנו להתעמק בפרוייקט סוף השנה שלנו, שכשמו כן הוא - ויימשך עד סוף השנה. השנה נפרדנו כבר מכמה חברימות שנסעו לארצות רחוקות יותר ופחות - ארי בבולגריה, פלג בארה"ב (ניו ג'רזי כמו שהילדימות מזכירים) ואלינור בגרמניה. הנסיעות העלו את הרעיון שיש המון מקומות שונים בעולם שאנשים חיים בהם, ואנחנו חשבנו לפתח אותו.
@@ -70,6 +66,8 @@ date: 2024-06-21T10:13:04.533Z
 בהשראת האיים הרבים של יוון, החלטנו יום אחד לעשות אי גדול בארגז החול שלנו. במרכז ארגז החול הקמנו הר ע-נ-קי, חפרנו מסביבו בור גדול, ואז הוספנו לבור מים, וראינו איך האי שלנו מוקף כולו במים. שכשכנו בבוץ הקריר שנוצר ועזר לנו קצת להצטנן בקיץ החם…
 
 הסתכלנו על תמונות מיוון, וראינו שיש שם הרבה בניינים על עמודים, פסלים, כדים מחימר, פסיפסים. גם אנחנו רצינו ליצור פסלים ופסיפסים משלנו - שילבנו את האלמנטים היווניים בחימר, בארגז החול, בעבודות ההדבקה שלנו, וראינו איך הילדימות נותנים לדמיון שלהם לפרוח בעבודות שלהם.
+
+הקשבנו גם למוזיקה יוונית - גם קצבית וגם קצת יותר איטית. שמענו נגינת בגלמה [ובוזוקי](https://www.youtube.com/watch?v=kG12C1oX5Eo), וחשבנו ששניהם נשמעים קצת כמו גיטרה. התבוננו בתמונות שלהם וראינו שהצורה של הגוף שלהם היא קצת יותר כמו ביצה. הקשבנו ורקדנו עם שירים שונים. נהנו לרקוד ונתנו הרבה קצב [ברגליים ובידיים](https://www.youtube.com/watch?v=sFdSCsTkU1s), וגילינו שיש גם מוסיקה יוונית בעברית! המקצב שלה עדיין יווני, אבל את המלים אנחנו לגמרי מבינים!
 
 בשבוע הבא נקפוץ ליבשת הבאה שלנו, שממש צמודה לישראל - אפריקה. נתמקד בקניה ובבעלי החיים שלה, אז אם מישהו מהילדימות היו בספארי בקניה, מוזמנימות לשתף את מיכל/חוה בתמונות שנוכל לחלוק עם יתר הילדימות תוך כדי השיח!
 
