Update עדכון שבועי “ים-יבשה”

--- a/content/weekly-update/ים-יבשה.md
+++ b/content/weekly-update/ים-יבשה.md
@@ -8,7 +8,7 @@ date: 2024-06-21T10:13:04.533Z
 
 1. **מסיבות סיום**: מסיבות הסיום שלנו שונות מאלו המסורתיות בגנים, ממש כפי שכל יתר החגיגות בגן אינן מופע להורים, גם כאן המסיבות מהוות הזדמנות של הילדימות לחוות יחד אתכם פעילויות מתוך היום יום שלנו. מיד נספר על התהליך שלנו, אבל קודם כל, שימרו לעצמכם את התאריכים אם טרם עשיתם זאת:
 
-**מסיבת הסיום של השכבה הצעירה תתקיים ביום חמישי ה-18.7, בשעה 17:00, בחוף הים** - נודיע על מיקום מדוייק בהמשך. כדי שהילדימות והצוות יספיקו לנוח ולהתארגן, ביום זה האיסוף של שתי השכבות יהיה מוקדם: **את הצעירים ניתן יהיה לאסוף בין 14:45 ל-15:0**0. לאחר מכן הצוות כבר עסוק בארגונים למסיבה ונסיעה לחוף. כדי שגם צוות השכבה הבוגרת יוכל לעזור בארגונים, **איסוף הבוגרימות יהיה עד השעה 16:00.**
+**מסיבת הסיום של השכבה הצעירה תתקיים ביום חמישי ה-18.7, בשעה 17:00, בחוף הים** - נודיע על מיקום מדוייק בהמשך. כדי שהילדימות והצוות יספיקו לנוח ולהתארגן, ביום זה האיסוף של שתי השכבות יהיה מוקדם: **את הצעירים ניתן יהיה לאסוף בין 14:45 ל-15:00**. לאחר מכן הצוות כבר עסוק בארגונים למסיבה ונסיעה לחוף. כדי שגם צוות השכבה הבוגרת יוכל לעזור בארגונים, **איסוף הבוגרימות יהיה עד השעה 16:00.**
 
 **מסיבת הסיום של השכבה הבוגרת תתקיים בדיוק שבוע לאחר מכן, ב-25.7**, ותיערך במתכונת של מסלול משימות שכונתי בכל האתרים המוכרים בסביבת הגן. **ביום זה הגן ייסגר בשעה 16:00 בשתי השכבות** על מנת לאפשר לצוות להתארגן ולנוח מעט. 
 
