Update עדכון שבועי “חול-וקרנבל”

--- a/content/weekly-update/חול-וקרנבל.md
+++ b/content/weekly-update/חול-וקרנבל.md
@@ -52,8 +52,6 @@ How else do we find ways to include English in our day? In our daily routine we 
 
 **צוות השכבה הצעירה - הילה, נגה א, קרן אור, רוני,  יהודית, שירז, גבי, ענבר, דשה ואלמוג**
 
- 
-
 ## שכבת הבוגרים
 
 השבוע לקחנו שוב את תיק המסע שלנו, ויצאנו לדרך ארוכה - הפעם כבר יצאנו מהים התיכון לגמרי, והיינו צריכים לחצות אוקיינוס שלם! איך נעשה את זה, בסירה או במטוס. לקחנו מטוס לברזיל! מה יחכה לנו בברזיל? אחת הילדות אמרה שיש שם פסל גדול כזה עם ידיים הצידה. נכון! התבוננו בתמונה של הפסל, וניסינו גם אנחנו לעמוד כמוהו. כמה זמן אפשר לעמוד כך עם ידיים לצדדים? זה נעים בידיים? זה מעייף? וכך הגענו ל[ריו דה ז'נירו](https://www.youtube.com/watch?v=N0DpMYzj6l8).
@@ -80,7 +78,7 @@ How else do we find ways to include English in our day? In our daily routine we 
 
 אוהד סיפר לנו שבקונטרבס אפשר לנגן בשתי דרכים: אפשר ממש לפרוט על המיתרים - וזה נקרא "פיציקטו". ואפשר לנגן על המיתרים עם הקשת, וזה עושה צלילים ארוכים שנמשכים זה לתוך זה. גילינו שהרבה דברים בעולם אפשר לחלק בצורה הזו - דברים שהם "בדידים", כלומר נפרדים ושלמים, ודברים שהם "רציפים". למשל, כשאנחנו מוחאים כף, זה בדיד, אבל כשאנחנו מזמזמים, זה רציף. את ימי ההולדת שלנו, אנחנו סופרים בצורה בדידה - חוגגים ב-3 וב-4, ולא באמצע…
 
-הילדימות ביקשו מאוהד שינגן להם את "[סאני](https://www.youtube.com/watch?v=ghGiv7YLC7Q)", ולבסוף כך יצאנו גם ברכבת מהכיתה!
+הילדימות ביקשו מאוהד שינגן להם את "[סאני](https://www.youtube.com/watch?v=ghGiv7YLC7Q)", ולבסוף כך יצאנו גם ברכבת מהכיתה! המון תודה לאוהד וארי על המפגש המעניין ועל שחלקו איתנו את כל הכיף הזה!
 
 בחוץ, התאספנו למסיבת ריקודים ברזילאית, משתפים אתכם [בפלייליסט](https://open.spotify.com/playlist/6nvHwpsXYL8Qr8biD6auOo?si=704b6680d7594acd) של השבוע שלנו!
 
