--- a/content/weekly-update/שבוע-של-קיץ-והרגשה-של-כמעט-סוף.md
+++ b/content/weekly-update/שבוע-של-קיץ-והרגשה-של-כמעט-סוף.md
@@ -18,7 +18,7 @@ date: 2024-07-26T14:40:47.684Z
 
 **עומרי, אחינועם וכל גן ילדי הטבע**
 
-**השכבה הצעירה**
+## **השכבה הצעירה**
 
 אמנם עבר שבוע מאז מסיבת הסיום שלנו אבל אנחנו מרגישות את ההדים שלה בשבוע האחרון! ראינו איך המפגש השכבתי למסיבת הסיום בחוף הים היה כל כך משמעותי עבור הילדימות.
 
@@ -40,7 +40,7 @@ date: 2024-07-26T14:40:47.684Z
 
 **שבת שלום מצוות השכבה הצעירה - הילה, נגה א, רוני,  לילה, יהודית, שירז, גבי, דשה ואלמוג**
 
-**שכבת הבוגרים**
+## **שכבת הבוגרים**
 
 אחרי שקפצנו לביקור (כמעט) בכל היבשות (הילדימות כבר זיהו על איזו יבשת פסחנו), התחלנו לעטוף את הפרוייקט שלנו, ולחבר את כל הדברים השונים שדיברנו עליהם. חזרנו על פעילויות שאהבנו במיוחד או סתם לא הספקנו, וכמובן גם תרגלנו חלק מהתחנות שלנו לקראת המסיבה.
 
