Update עדכון שבועי “שבוע-של-קיץ-והרגשה-של-כמעט-סוף”

--- a/content/weekly-update/שבוע-של-קיץ-והרגשה-של-כמעט-סוף.md
+++ b/content/weekly-update/שבוע-של-קיץ-והרגשה-של-כמעט-סוף.md
@@ -1,5 +1,5 @@
 ---
-title: שבוע של קיץ והרגשה של כמעט סוף
+title: שבוע של קיץ וכמעט סוף
 date: 2024-07-26T14:40:47.684Z
 ---
 **שבת שלום לכל משפחות הגן,**
